MAGETWO-31045: Layout issue on Contact Us form

--- a/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/listings.less
+++ b/app/design/frontend/Magento/luma/Magento_Catalog/web/css/source/listings.less
@@ -296,11 +296,11 @@
     }
     
     .products-grid .product-item { width: 100%/3 }
-    .layout-1 .products-grid .product-item { width: 100%/3 }
-    .layout-3 .products-grid .product-item { width: 100%/3 }
+    .page-layout-1column .products-grid .product-item { width: 100%/3 }
+    .page-layout-3columns .products-grid .product-item { width: 100%/3 }
     .page-products .products-grid .product-item { width: 100%/3 }
-    .page-products.layout-1 .products-grid .product-item { width: 100%/3 }
-    .page-products.layout-3 .products-grid .product-item { width: 100%/3 }
+    .page-products.page-layout-1column .products-grid .product-item { width: 100%/3 }
+    .page-products.page-layout-3columns .products-grid .product-item { width: 100%/3 }
 }
 
 //
@@ -309,13 +309,13 @@
 
 .responsive-min-l(@break) when (@break = @screen-m) {
     .page-products .products-grid .product-item { width: 100%/3 }
-    .page-products.layout-1 .products-grid .product-item { width: 100%/4 }
-    .page-products.layout-3 .products-grid .product-item { width: 100%/2 }
+    .page-products.page-layout-1column .products-grid .product-item { width: 100%/4 }
+    .page-products.page-layout-3columns .products-grid .product-item { width: 100%/2 }
 }
 .responsive-min-l(@break) when (@break = @screen-l) {
     .products-grid .product-item { width: 100%/5 }
-    .layout-1 .products-grid .product-item { width: 100%/6 }
-    .layout-3 .products-grid .product-item { width: 100%/4 }
+    .page-layout-1column .products-grid .product-item { width: 100%/6 }
+    .page-layout-3columns .products-grid .product-item { width: 100%/4 }
     .page-products .products-grid .product-items { margin: 0; }
     .page-products .products-grid .product-item {
         width: 23%;
@@ -325,8 +325,8 @@
             margin-left: 0;
         }
     }
-    .page-products.layout-1 .products-grid .product-item { width: 100%/5 }
-    .page-products.layout-3 .products-grid .product-item { width: 100%/4 }
+    .page-products.page-layout-1column .products-grid .product-item { width: 100%/5 }
+    .page-products.page-layout-3columns .products-grid .product-item { width: 100%/4 }
 }
 
 .responsive-min-l(@break) when (@break = @screen-xl) {
